<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mailLabels"
        android:title="@string/all_labels">
        <menu>

        </menu>
    </item>

    <item
        android:id="@+id/navMenuLogOut"
        android:icon="@drawable/ic_exit_to_app_grey_32dp"
        android:title="@string/log_out" />

    <item
        android:id="@+id/navMenuActionReportProblem"
        android:icon="@drawable/ic_bug_report_grey_32dp"
        android:title="@string/report_problem" />

    <item
        android:id="@+id/navMenuActionSettings"
        android:icon="@drawable/ic_settings_grey_32dp"
        android:title="@string/action_settings" />
</menu>
