<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewIdAddNewAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/imageViewActiveUserPhoto"
        android:layout_width="@dimen/user_photo_size"
        android:layout_height="@dimen/user_photo_size"
        android:layout_margin="@dimen/default_margin_content"
        android:contentDescription="@string/user_photo"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUserDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_content_small"
        android:text="@string/add_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewActiveUserPhoto"
        app:layout_constraintStart_toEndOf="@+id/imageViewActiveUserPhoto"
        app:layout_constraintTop_toTopOf="@+id/imageViewActiveUserPhoto"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>
